--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="https://daily-hot-one-iota.vercel.app/"
+VITE_GLOBAL_API="https://daily-hot-git-master-xingguang666s-projects.vercel.app/"
 
 # ICP 备案号
 VITE_ICP = "豫ICP备2022018134号-1"
